@@ -103,18 +103,25 @@
           <option name="myAdditionalJavadocTags" value="" />
         </inspection_tool>
         <inspection_tool class="NonSerializableFieldInSerializableClass" enabled="true" level="WARNING" enabled_by_default="true">
+          <option name="ignorableAnnotations">
+            <value />
+          </option>
+          <option name="ignoreAnonymousInnerClasses" value="false" />
           <option name="superClassString" value="" />
         </inspection_tool>
         <inspection_tool class="NonSerializableObjectPassedToObjectStream" enabled="true" level="WARNING" enabled_by_default="true" />
         <inspection_tool class="ReadObjectInitialization" enabled="true" level="WARNING" enabled_by_default="true" />
         <inspection_tool class="SerialVersionUIDNotStaticFinal" enabled="true" level="WARNING" enabled_by_default="true" />
         <inspection_tool class="SerializableHasSerialVersionUIDField" enabled="true" level="WARNING" enabled_by_default="true">
+          <option name="ignoreAnonymousInnerClasses" value="false" />
           <option name="superClassString" value="" />
         </inspection_tool>
         <inspection_tool class="SerializableInnerClassHasSerialVersionUIDField" enabled="true" level="WARNING" enabled_by_default="true">
+          <option name="ignoreAnonymousInnerClasses" value="false" />
           <option name="superClassString" value="" />
         </inspection_tool>
         <inspection_tool class="SerializableInnerClassWithNonSerializableOuterClass" enabled="true" level="WARNING" enabled_by_default="true">
+          <option name="ignoreAnonymousInnerClasses" value="false" />
           <option name="superClassString" value="" />
         </inspection_tool>
         <inspection_tool class="SerializableWithUnconstructableAncestor" enabled="true" level="WARNING" enabled_by_default="true" />
@@ -326,6 +333,15 @@
     </library>
   </component>
   <component name="org.twodividedbyzero.idea.findbugs">
+    <option name="annotationTypeSettings">
+      <map>
+        <entry key="ExpPriority" value="-16777216;-1;-8355712;WAVE_UNDERSCORE;0;" />
+        <entry key="HighPriority" value="-65536;-1;-65536;WAVE_UNDERSCORE;1;" />
+        <entry key="IgnorePriority" value="-16777216;-1;-8650628;WAVE_UNDERSCORE;0;" />
+        <entry key="LowPriority" value="-16777216;-1;-16711936;BOXED;0;" />
+        <entry key="NormalPriority" value="-16777216;-1;-5066240;WAVE_UNDERSCORE;2;" />
+      </map>
+    </option>
     <option name="_basePreferences">
       <map>
         <entry key="property.analysisEffortLevel" value="default" />
@@ -348,7 +364,7 @@
     <option name="_detectors">
       <map>
         <entry key="AppendingToAnObjectOutputStream" value="true" />
-        <entry key="BCPMethodReturnCheck" value="false" />
+        <entry key="AtomicityProblem" value="true" />
         <entry key="BadAppletConstructor" value="false" />
         <entry key="BadResultSetAccess" value="true" />
         <entry key="BadSyntaxForRegularExpression" value="true" />
@@ -368,6 +384,7 @@
         <entry key="ConfusedInheritance" value="true" />
         <entry key="ConfusionBetweenInheritedAndOuterMethod" value="true" />
         <entry key="CrossSiteScripting" value="true" />
+        <entry key="DefaultEncodingDetector" value="true" />
         <entry key="DoInsideDoPrivileged" value="true" />
         <entry key="DontCatchIllegalMonitorStateException" value="true" />
         <entry key="DontIgnoreResultOfPutIfAbsent" value="true" />
@@ -377,13 +394,11 @@
         <entry key="DumbMethods" value="true" />
         <entry key="DuplicateBranches" value="true" />
         <entry key="EmptyZipFileEntry" value="true" />
-        <entry key="EqStringTest" value="false" />
         <entry key="EqualsOperandShouldHaveClassCompatibleWithThis" value="true" />
+        <entry key="ExplicitSerialization" value="true" />
         <entry key="FieldItemSummary" value="true" />
         <entry key="FinalizerNullsFields" value="true" />
-        <entry key="FindBadCast" value="false" />
         <entry key="FindBadCast2" value="true" />
-        <entry key="FindBadEqualsImplementation" value="false" />
         <entry key="FindBadForLoop" value="true" />
         <entry key="FindBugsSummaryStats" value="true" />
         <entry key="FindCircularDependencies" value="false" />
@@ -424,8 +439,10 @@
         <entry key="FindUnreleasedLock" value="true" />
         <entry key="FindUnsatisfiedObligation" value="true" />
         <entry key="FindUnsyncGet" value="true" />
+        <entry key="FindUseOfNonSerializableValue" value="true" />
         <entry key="FindUselessControlFlow" value="true" />
         <entry key="FormatStringChecker" value="true" />
+        <entry key="FunctionsThatMightBeMistakenForProcedures" value="true" />
         <entry key="HugeSharedStringConstants" value="true" />
         <entry key="IDivResultCastToDouble" value="true" />
         <entry key="IncompatMask" value="true" />
@@ -434,15 +451,15 @@
         <entry key="InefficientToArray" value="true" />
         <entry key="InfiniteLoop" value="true" />
         <entry key="InfiniteRecursiveLoop" value="true" />
-        <entry key="InfiniteRecursiveLoop2" value="false" />
         <entry key="InheritanceUnsafeGetResource" value="true" />
         <entry key="InitializationChain" value="true" />
+        <entry key="InitializeNonnullFieldsInConstructor" value="true" />
         <entry key="InstantiateStaticClass" value="true" />
+        <entry key="IntCast2LongAsInstant" value="true" />
         <entry key="InvalidJUnitTest" value="true" />
         <entry key="IteratorIdioms" value="true" />
         <entry key="LazyInit" value="true" />
         <entry key="LoadOfKnownNullValue" value="true" />
-        <entry key="LockedFields" value="false" />
         <entry key="LostLoggerDueToWeakReference" value="true" />
         <entry key="MethodReturnCheck" value="true" />
         <entry key="Methods" value="true" />
@@ -453,7 +470,6 @@
         <entry key="Noise" value="false" />
         <entry key="NoiseNullDeref" value="false" />
         <entry key="NoteAnnotationRetention" value="true" />
-        <entry key="NoteCheckReturnValue" value="true" />
         <entry key="NoteCheckReturnValueAnnotations" value="true" />
         <entry key="NoteDirectlyRelevantTypeQualifiers" value="true" />
         <entry key="NoteJCIPAnnotation" value="true" />
@@ -487,14 +503,15 @@
         <entry key="TestASM" value="false" />
         <entry key="TestDataflowAnalysis" value="false" />
         <entry key="TestingGround" value="false" />
+        <entry key="TestingGround2" value="false" />
         <entry key="TrainFieldStoreTypes" value="true" />
+        <entry key="TrainLongInstantfParams" value="true" />
         <entry key="TrainNonNullAnnotations" value="true" />
         <entry key="TrainUnconditionalDerefParams" value="true" />
         <entry key="URLProblems" value="true" />
         <entry key="UncallableMethodOfAnonymousClass" value="true" />
         <entry key="UnnecessaryMath" value="true" />
         <entry key="UnreadFields" value="true" />
-        <entry key="UseObjectEquals" value="false" />
         <entry key="UselessSubclassMethod" value="false" />
         <entry key="VarArgsProblems" value="true" />
         <entry key="VolatileUsage" value="true" />
@@ -515,6 +532,15 @@
         <entry key="PERFORMANCE" value="true" />
         <entry key="SECURITY" value="true" />
         <entry key="STYLE" value="true" />
+      </map>
+    </option>
+    <option name="_annotationTypeSettings">
+      <map>
+        <entry key="ExpPriority" value="-16777216;-1;-8355712;WAVE_UNDERSCORE;0;" />
+        <entry key="HighPriority" value="-65536;-1;-65536;WAVE_UNDERSCORE;1;" />
+        <entry key="IgnorePriority" value="-16777216;-1;-8650628;WAVE_UNDERSCORE;0;" />
+        <entry key="LowPriority" value="-16777216;-1;-16711936;BOXED;0;" />
+        <entry key="NormalPriority" value="-16777216;-1;-5066240;WAVE_UNDERSCORE;2;" />
       </map>
     </option>
   </component>
