@@ -1,0 +1,9 @@
+{
+    "id" : "plasma_cannon",
+    "damage" : 2,
+    "name": "Plasma cannon",
+    "desc": "Weapon that uses accelerated overheated plasma clouds. High damage, low range",
+    "shotSprite" : "plasma_shot",
+    "range" : 2,
+    "reloadTurns" : 4
+}
