@@ -12,7 +12,6 @@ import ru.game.aurora.application.Camera;
 import ru.game.aurora.application.ResourceManager;
 import ru.game.aurora.gui.FailScreen;
 import ru.game.aurora.world.equip.StarshipWeapon;
-import ru.game.aurora.world.equip.StarshipWeaponDesc;
 import ru.game.aurora.world.space.SpaceObject;
 
 import java.util.ArrayList;
@@ -37,7 +36,7 @@ public class Ship extends BasePositionable implements SpaceObject {
     public Ship(int x, int y) {
         super(x, y);
         hull = maxHull = 3;
-        weapons.add(new StarshipWeapon(new StarshipWeaponDesc(1, "Laser cannons", "Simple middle-range laser cannons", "blaster_shot", 5, 3), StarshipWeapon.MOUNT_ALL));
+        weapons.add(new StarshipWeapon(ResourceManager.getInstance().getWeapons().getEntity("laser_cannon"), StarshipWeapon.MOUNT_ALL));
     }
 
 
